--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
   <h1>Odin Recipes</h1>
+  <a href="./recipes/Italian-Chicken-Marinade.html">Italian Chicken Marinade</a>
 </body>
 
 </html>
