--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 
 <body>
   <h1>Odin Recipes</h1>
-  <a href="./recipes/Italian-Chicken-Marinade.html">Italian Chicken Marinade</a>
+  <ul>
+    <li><a href="./recipes/Italian-Chicken-Marinade.html">Italian Chicken Marinade</a></li>
+    <li><a href="./recipes/Grilled-Teriyaki-Shrimp-and-Pineapple-Skewers.html">Grilled Teriyaki Shrimp and Pineapple
+        Skewers</a>
+    </li>
+    <li><a href="./recipes/marinated-grilled-pork-tenderloin.html">Marinated Grilled Pork Tenderloin</a></li>
+  </ul>
+
 </body>
 
 </html>
